* some changes with float / align on embed elements
* completed i18n translation, using a custom i18n generator (classes/ezoepackerfunctions.php)
  to generate i18n strings for TinyMCE
* Updated TinyMCE to 3.0.6.2
* now possible to disable packer with DevelopmentMode setting in ezoe.ini
* browse and search in link dialog + icons for selection in search and browse

0.98
* string translations
* fix for bug when custom attribute or custom tag had a '_' in name
* switched custom block tag to use div tag to work better in TinyMCE
  (inline custom tags use span for the same reason)
* fixed search bug
* apply to whole column and row on table cell dialog
* fixed custom attributes on table cells not correct if you switch cell type

0.97 (internal)
* disabled toolbar floating in ie 6 / 7 to work around floating bug
* moved ez_core scripts to ezoe folder to avoid design override problems
* Allow custom tags and table nesting


0.96 (internal)
* this extension is now known as ezoe and not eztinymce
* updated TinyMCE to 3.0.5
* added eZOEPacker ('ezoecss' and 'ezoescript' operators), to pack css and js
* EditorCSSFileList support added, support for css from other locations
* tinymce plugins from other locations (extensions/designs) now possible
* fixed and enabled indenting / outdenting 
* fixed class not working on p / header / tr / li tags
* fixed change class list when td / th is changed


0.95
* fixed issue with new custom tags not being saved correctly
* fixed js bug when you edit image
* Preview align changes while you edit image properties
* updated TinyMCE to 3.0.3
* enabled safari plugin in TinyMCE, this 'fixes' bugs in Safari
* Not Disable fullscreen button when you select a embed tag
* fixed class disapearing on table on store when border=0
* Added support for Skin Variants in ezoe.ini


0.94
* Fixed anchor insert
* Preview of embed object tags while editing / inserting
* Added th support (in cell properties popup)