@@ -1,7 +1,6 @@
 
 
 5.0
-Style on bowse / search / tabs / editor content (+ attachment bg on embed tags)
 disable list button inside headings
 
 
