@@ -1,7 +1,7 @@
 {default embed_mode         = true()
          class_filter_array = array()
          classes            = fetch( 'class', 'list' )}
-	<div class="slide" id="search_box" style="display: none; position: relative;">
+	<div class="panel" id="search_box" style="display: none; position: relative;">
 	    {if $embed_mode}
 	        <a id="embed_search_go_back_link" title="Go back" href="JavaScript:void(0);" style="position: absolute; top: 5px; left: 5px;"><img width="13" height="11" border="0" src={"ezoe/arrow-left.gif"|ezimage} /></a>
 	    {/if}
