@@ -46,8 +46,8 @@ tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {
         });
         ezoeLinkTypeSet( linkSource, linkTypes );
  
-        slides = ez.$$('div.slide'), navigation = ez.$('embed_search_go_back_link', 'search_for_link', 'browse_for_link', 'embed_browse_go_back_link' );
-        slides.accordion( navigation, {duration: 150, transition: ez.fx.sinoidal, accordionAutoFocusTag: 'input[type=text]'}, {marginLeft: 360, display: 'none'} );
+        slides = ez.$$('div.panel'), navigation = ez.$('embed_search_go_back_link', 'search_for_link', 'browse_for_link', 'embed_browse_go_back_link' );
+        slides.accordion( navigation, {duration: 150, transition: ez.fx.sinoidal, accordionAutoFocusTag: 'input[type=text]'}, {opacity: 0, display: 'none'} );
         navigation[3].addEvent('click', ez.fn.bind( slides.accordionGoto, slides, 0 ) );
         navigation[3].addClass('accordion_navigation');
     }
@@ -124,10 +124,16 @@ div.slide { width: 360px; }
 
 <div>
 
-    <form action="JavaScript:void(0)" method="post" name="EditForm" id="EditForm" enctype="multipart/form-data" style="width: 360px;">
-    
+    <form action="JavaScript:void(0)" method="post" name="EditForm" id="EditForm" enctype="multipart/form-data">
+        <div id="tabs" class="tabs">
+        <ul>
+            <li class="tab current"><span><a href="JavaScript:void(0);">{'Properties'|i18n('design/standard/ezoe')}</a></span></li>
+        </ul>
+        </div>
 
-    <div class="slide">
+
+<div class="panel_wrapper" style="height: 360px;">
+    <div class="panel">
         <div class="attribute-title">
             <h2 style="padding: 0 0 4px 0;">{$tag_name|upfirst|wash}</h2>
         </div>
@@ -175,6 +181,7 @@ div.slide { width: 360px; }
 
 {include uri="design:ezoe/box_browse.tpl"}
 
+</div>
     </form>
 
 </div>
