@@ -41,6 +41,7 @@ Buttons[]=merge_cells
 Buttons[]=|
 #Buttons[]=code
 Buttons[]=fullscreen
+#Buttons[]=help
 
 # TinyMCE plugins you want to use
 Plugins[]
