@@ -18,6 +18,8 @@ eZ Online Editor MCE extension Changelog
 * Updated TinyMCE to 3.0.6.2
 * now possible to disable packer with DevelopmentMode setting in ezoe.ini
 * browse and search in link dialog + icons for selection in search and browse
+* don't add display:block on embed images
+* use TinyMce styles in dialogs
 
 0.98
 * string translations
